edit about and team

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                 <li>
                                     <a href="#">Event</a>
                                     <div class="dropdown drop-02" style="height: 120px;">
-                                            <a href="#">Indoor Events</a>
-                                            <a href="#">Outreaches</a>
+                                        <a href="#">Indoor Events</a>
+                                        <a href="#">Outreaches</a>
                                     </div>
                                 </li>
                                 <li>
@@ -267,12 +267,15 @@
                         <div class="col-md-6 col-sm-6 wow slideInRight" data-wow-duration="1s">
 
                             <div id="about-right">
-                                <p>At Open Dreams, we see education as a gift that opens doors. We help those who need
-                                    it most find the quality education they deserve</p>
+                                <p>It is a community of developers under the umbrella of Seven Advanced Academy
+                                    that brings together people from various backgrounds with diverse experiences aimed
+                                    at collectively generating solutions to common problems. Typically aiming to build a
+                                    stronger
+                                    and more resilient community.</p>
 
-                                <p>Quality education is the sine qua non of our survival; Giving every young person the
-                                    opportunity to access quality education is therefore a shared responsibility.~~
-                                    Elvis Tanwie </p>
+                                <p>Inspire, Discipline, Motivate. ~ Seven Advanced Academy </p>
+
+                                <p>Innovating the Obvious. ~ Seven Global Procurement and Sourcing (GPS) </p>
                             </div>
 
                         </div>
@@ -287,7 +290,6 @@
                             <div id="about-bottom">
                                 <img src="img/about/about.png" alt="About Us" class="img-responsive">
                                 <img src="images/about.jpeg" alt="About Us" class="img-responsive about-open">
-
                             </div>
 
                         </div>
@@ -316,9 +318,9 @@
                                 <i class="fa fa-rocket"></i>
                                 <h3>Mission</h3>
                                 <hr>
-                                <p style="font-size: 18px;">We strongly believe each person is destined to do great
-                                    things in life regardless of their background. Our dream is to open doors and help
-                                    them do it</p>
+                                <p style="font-size: 18px;">Bringing together young minds that will collectively ponder
+                                    on the challenges faced by their
+                                    community and provide reliable, long lasting solutions using IT</p>
                             </div>
 
                         </div>
@@ -328,8 +330,10 @@
                                 <i class="fa fa-eye"></i>
                                 <h3>Vision</h3>
                                 <hr>
-                                <p style="font-size: 18px;">Work with High Achieving Low Income students who dare dream
-                                    big to study abroad on fully funded scholarships.</p>
+                                <p style="font-size: 18px;">We think, we code, we change the world! With our brilliant
+                                    ideas,
+                                    we critically think on lasting solutions, changes and improvements in our nation,
+                                    and the world at large.</p>
                             </div>
 
                         </div>
@@ -339,9 +343,9 @@
                                 <i class="fa fa-pencil"></i>
                                 <h3>Passion</h3>
                                 <hr>
-                                <p style="font-size: 18px;">Providing essential ingredients - computers, internet
-                                    access, study guides, teachers and a classroom - needed to amximize educational
-                                    opportunities</p>
+                                <p style="font-size: 18px;">We link various developers so as to encourage learning,
+                                    resource sharing and growth.
+                                    We are passionate at seeing developers bring out the best of them.</p>
                             </div>
 
                         </div>
@@ -375,10 +379,10 @@
 
                             <div class="vertical-heading">
                                 <h5>Who We Are</h5>
-                                <h2>Meet Our<br><strong>Talented</strong> Team</h2>
+                                <h2>Meet Our<br><strong>Leading</strong> Team</h2>
                             </div>
-                            <p style="font-size: 18px;">Our team works deligently to help high achieving low income
-                                students secure fully funded scholarships across the globe.</p>
+                            <p style="font-size: 18px;">Our team works deligently to help bring developers together
+                                and plan on how events should be carried out.</p>
 
                         </div>
 
@@ -391,11 +395,11 @@
 
                             <!-- Member 01 -->
                             <div class="team-member">
-                                <img src="img/team/team-1.jpg" alt="team member" class="img-responsive">
+                                <img src="./images/noel.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>Blaise Buma</h6>
-                                        <p>Co-founder</p>
+                                        <h6>Mr. Fon Noel Nfebe</h6>
+                                        <p>Director of Learning</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -407,11 +411,11 @@
                             </div>
                             <!-- Member 02 -->
                             <div class="team-member">
-                                <img src="img/team/team-2.jpg" alt="team member" class="img-responsive">
+                                <img src="./images/olouge.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>Hans Kulberg</h6>
-                                        <p>Co-founder</p>
+                                        <h6>Mr. Olouge Eya</h6>
+                                        <p>Director Of Seven Dev Community</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -423,11 +427,11 @@
                             </div>
                             <!-- Member 03 -->
                             <div class="team-member">
-                                <img src="img/team/team-3.jpg" alt="team member" class="img-responsive">
+                                <img src="images/noella.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>Christina Kulberg</h6>
-                                        <p>C0-founder</p>
+                                        <h6>Miss Mbongeya Noella</h6>
+                                        <p>Community Mentor</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -439,11 +443,11 @@
                             </div>
                             <!-- Member 04 -->
                             <div class="team-member">
-                                <img src="img/team/team-4.jpg" alt="team member" class="img-responsive">
+                                <img src="./images/eric.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>Akaba James</h6>
-                                        <p>National Director</p>
+                                        <h6>Mr. Bochu Yunwen Eric</h6>
+                                        <p>Community Manager</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -455,11 +459,11 @@
                             </div>
                             <!-- Member 05 -->
                             <div class="team-member">
-                                <img src="img/team/team-5.jpg" alt="team member" class="img-responsive">
+                                <img src="images/linelle.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>Claudette Fumeh</h6>
-                                        <p>Secretary Bamenda</p>
+                                        <h6>Miss Kamthie Lontchi Lionelle</h6>
+                                        <p>Women Lead</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -472,11 +476,28 @@
 
                             <!-- Member 06 -->
                             <div class="team-member">
-                                <img src="img/team/team-6.jpg" alt="team member" class="img-responsive">
+                                <img src="./images/joy.jpg" alt="team member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
-                                        <h6>------</h6>
-                                        <p>Secretary Yaounde</p>
+                                        <h6>Miss Mambo Joy</h6>
+                                        <p>Co-Organiser</p>
+                                        <ul class="social-list">
+                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <!-- Member 07 -->
+                            <div class="team-member">
+                                <img src="img/team/team-1.jpg" alt="team member" class="img-responsive">
+                                <div class="team-member-overlay">
+                                    <div class="team-member-info text-center">
+                                        <h6>Mr. Sange Christian Nji</h6>
+                                        <p>Co-Organiser</p>
                                         <ul class="social-list">
                                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
