--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
                             <!-- Skill 01 -->
                             <div class="skill">
-                                <h4>SAT Prep</h4>
+                                <h4>HTML/CSS</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
                                         aria-valuemax="100" style="width: 0%;">
@@ -536,7 +536,7 @@
                         <div class="col-md-6 col-sm-6">
                             <!-- Skill 02 -->
                             <div class="skill">
-                                <h4>TOEFL/IELTS/DUOLINGO Prep</h4>
+                                <h4>PHYTHON</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                                         aria-valuemax="100" style="width: 0%;">
@@ -548,7 +548,7 @@
                         <div class="col-md-6 col-sm-6">
                             <!-- Skill 03 -->
                             <div class="skill">
-                                <h4>Scholarship and college counselling</h4>
+                                <h4>PHP</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                                         aria-valuemax="100" style="width: 0%;">
@@ -560,7 +560,7 @@
                         <div class="col-md-6 col-sm-6">
                             <!-- Skill 04 -->
                             <div class="skill">
-                                <h4>Digital Marketing</h4>
+                                <h4>JavaScript</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                         aria-valuemax="100" style="width: 0%;">
@@ -596,10 +596,10 @@
 
                         <div id="tech-statement" class="text-center">
 
-                            <h3><i class="fa fa-quote-left"></i> We don't just dream, we do the work to realize them
-                                <br> our scholars work hard all summer to reach their dreams. <i
+                            <h3><i class="fa fa-quote-left"></i> positively influencing and educating people on how technology can be used
+                                 in solvng challenges in order to improve productivity, social life and the standards of living <i
                                     class="fa fa-quote-right"></i> </h3>
-                            <p>- Open Dreams Team -</p>
+                            <p>- Sev Dev Team -</p>
 
                         </div>
 
@@ -629,7 +629,7 @@
 
                             <div class="horizontal-heading">
                                 <h5>What We Do</h5>
-                                <h2>Our Services</h2>
+                                <h2>Our Events</h2>
                             </div>
 
                         </div>
