--- a/index.html
+++ b/index.html
@@ -83,29 +83,17 @@
                             <ul class="nav navbar-nav pull-right">
                                 <li><a class="smooth-scroll" href="#home">Home</a></li>
                                 <li>
-                                    <a href="#">Event</a>
-                                    <div class="dropdown drop-02" style="height: 120px;">
-                                        <a href="#">Indoor Events</a>
-                                        <a href="#">Outreaches</a>
-                                    </div>
+                                    <a class ="smooth-scroll" href="#events">Event</a>
                                 </li>
                                 <li>
-                                    <a class="scholars" href="#">Projects</a>
-                                    <div class="dropdown drop-02" style="height: 120px;">
-                                        <a href="#">Show Case</a>
-                                        <a href="#">Ongoing Projects</a>
-                                    </div>
+                                    <a class="smooth-scroll" href="#projects">Projects</a>
                                 </li>
                                 <li>
-                                    <a class="smooth-scroll" href="#">Membership</a>
-                                    <div class="dropdown drop-02" style="height: 120px;">
-                                        <a href="#">Become A Member</a>
-                                        <a href="#">Already a Member</a>
-                                    </div>
+                                    <a class="smooth-scroll" href="#membership">Membership/Partnership</a>
                                 </li>
                                 <li><a class="smooth-scroll" href="#about">About Us</a></li>
                                 <li><a class="smooth-scroll" href="#blog">Blogs</a></li>
-                                <li><a class="smooth-scroll" href="#">Contact</a></li>
+                                <li><a class="smooth-scroll" href="#contact">Contact</a></li>
                                 <li>
                                     <a class="smooth-scroll" href="#">
                                         <form class="form-inline my-2 my-lg-0">
@@ -596,7 +584,7 @@
 
                         <div id="tech-statement" class="text-center">
 
-                            <h3><i class="fa fa-quote-left"></i> positively influencing and educating people on how technology can be used
+                            <h3><i class="fa fa-quote-left"></i> Positively influencing and educating people on how technology can be used
                                  in solvng challenges in order to improve productivity, social life and the standards of living <i
                                     class="fa fa-quote-right"></i> </h3>
                             <p>- Sev Dev Team -</p>
@@ -615,10 +603,10 @@
     <!-- Statement Ends -->
 
     <!-- Services -->
-    <section id="services">
+    <section id="">
 
         <!-- Services 01 -->
-        <div id="services-01">
+        <div id="events">
             <div class="content-box-lg">
 
                 <div class="container">
@@ -716,7 +704,7 @@
         <!-- Services 01 Ends -->
 
         <!-- Services 02 -->
-        <div id="services-02">
+        <div id="projects">
 
             <div class="content-box-md">
 
@@ -1899,7 +1887,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Copyright &copy; 2015 All Rights Reserved By <span>Open Dreams Organization.org</span>
+                        Copyright &copy; 2020 All Rights Reserved By <span>Seven Dev Community in collaboration with Seven Advanced Academy</span>
                     </p>
                 </div>
             </div>
