--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Title -->
     <title>Seven Dev Com</title>
+    <!--typejs cdn-->
+    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
 
     <!-- Basic SEO -->
     <meta name="description" content="Creative website development with html5, css3, jQuery & bootstrap framework">
@@ -25,7 +27,7 @@
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="./css/font-awesome/css/font-awesome.min.css">
-
+   
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
 
@@ -149,7 +151,7 @@
             <div id="home-content-inner" class="text-center">
 
                 <div id="home-heading">
-                    <h1 id="home-heading-1">Seven Dev</h1><br>
+                    <h1 id="home-heading-1" id="typeit">Seven Dev</h1><br>
                     <div class="span">
                         <span class="span-hr-left">
                             <hr />
@@ -1644,8 +1646,9 @@
                                     </div>
                                     <div class="col-md-6">
 
+
                                         <div class="office">
-                                            <h4>Cameroon</h4>
+                                            <h4>Seven Dev Community</h4>
                                             <ul class="office-details">
                                                 <li><i class="fa fa-mobile"></i><span>+237 675 18 75 68 </span></li>
                                                 <li><i class="fa fa-envelope"></i><span>7devcom@gmail.com</span>
@@ -1761,6 +1764,8 @@
     </footer>
     <!-- Footer Ends -->
 
+    <!-- typejs -->
+    <script src="js/type.js"></script>
     <!-- JQuery -->
     <script src="js/jquery.min.js"></script>
 
