--- a/login.html
+++ b/login.html
@@ -85,6 +85,14 @@
                         </div>
                         <button type="submit" class="btn btn-primary btn-block" id="login">login</button>
                     </form>
+                    <a href="./index.html">
+                        <input type="button" class="btn btn-block" id="home" style="float: right !important; margin-top: 10%; border: none; border-radius: 1.5rem;
+                        padding: 2%; background: #f89623; color: #fff;
+                        font-weight: 700;
+                        width: 30%;
+                        cursor: pointer;" value="Home">
+                     </a>
+                   
                 </div>
             </div>
         </div>
