--- a/register.html
+++ b/register.html
@@ -228,6 +228,7 @@
     </style>
 
     <div class="container register">
+        
         <div class="row">
             <div class="col-md-3 col-sm-4 register-left">
                 <h3 style="color: #f8f9fa;">Welcome</h3>
@@ -316,8 +317,15 @@
                                 </div>
                                 <p>If you alreasy have an Account, <span><a href="./login.html">Login</a></span></p>
                             </div>
+                            <a href="./index.html">
+                                <input type="button" class="btn btn-primary" style="float: right !important; margin-top: 10%; border: none; border-radius: 1.5rem;
+                                padding: 2%; color: #fff;
+                                font-weight: 700;
+                                width: 30%;
+                                cursor: pointer;" value="Home">
+                            </a>
                         </form>
-
+                        
                     </div>
                 </div>
             </div>
