--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                                     <a class="smooth-scroll" href="#projects">Projects</a>
                                 </li>
                                 <li>
-                                    <a class="smooth-scroll" href="./register.html">Membership/Partnership</a>
+                                    <a href="./register.html">Membership/Partnership</a>
                                 </li>
                                 <li><a class="smooth-scroll" href="#about">About Us</a></li>
                                 <li><a class="smooth-scroll" href="#blog">Blogs</a></li>
                                 <li><a class="smooth-scroll" href="#contact">Contact</a></li>
                                 <li>
-                                    <a class="smooth-scroll" href="#">
+                                    <a  href="#">
                                         <form class="form-inline my-2 my-lg-0">
                                             <input class="form-control mr-sm-2" type="search" placeholder="Search">
                                             <!-- <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button> -->
@@ -118,7 +118,7 @@
                                 <li><a class="smooth-scroll" href="#home">Home</a></li>
                                 <li><a class="smooth-scroll" href="#events">Events</a></li>
                                 <li><a class="smooth-scroll" href="#projects">Projects</a></li>
-                                <li><a class="smooth-scroll" href="./register.html">Membership</a></li>
+                                <li><a href="./register.html">Membership</a></li>
                                 <li><a class="smooth-scroll" href="#about">About Us</a></li>
                                 <li><a class="smooth-scroll" href="#blog">Blogs</a></li>
                                 <li><a class="smooth-scroll" href="#contactS">Contact</a></li>
