--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Preloader -->
     <!-- <div id="preloader">
-        <div id="status">&nbsp;</div>
+        <div id="status">&nbsp;</div>er
     </div>  -->
 
     <!-- Header -->
